--- a/Detective-Game-Project/Packages/manifest.json
+++ b/Detective-Game-Project/Packages/manifest.json
@@ -13,6 +13,7 @@
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.timeline": "1.1.0",
     "com.unity.ugui": "1.0.0",
+    "me.ameye.prefab-painter": "file:C:/Users/Jordi Bontje/Downloads/PrefabPainter-master/PrefabPainter-master",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
