fixed sprinkler puzzle button placement
hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ sysinfo.txt
 *.apk
 *.unitypackage
 Detective-Game-Project/Assets/Prefabs/Art Assets/Videos/Intro_cutscene1_fade.mp4
+Detective-Game-Project/Assets/Prefabs/Art Assets/Videos/Intro_cutscene1_fade.mp4.meta
