added cutscenes, fixed some stuff in city level
also fixed some animations

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,7 @@ sysinfo.txt
 *.unitypackage
 Detective-Game-Project/Assets/Prefabs/Art Assets/Videos/Intro_cutscene1_fade.mp4
 Detective-Game-Project/Assets/Prefabs/Art Assets/Videos/Intro_cutscene1_fade.mp4.meta
+Detective-Game-Project/Assets/Prefabs/Art Assets/Videos/Cutscene3.mp4
+Detective-Game-Project/Assets/Prefabs/Art Assets/Videos/Cutscene3.mp4.meta
+Detective-Game-Project/Assets/Prefabs/Art Assets/Videos/Cutscene2.mp4.meta
+Detective-Game-Project/Assets/Prefabs/Art Assets/Videos/Cutscene2.mp4
