made some sounds louder

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@ Detective-Game-Project/Assets/Prefabs/Art Assets/Videos/Cutscene3.mp4
 Detective-Game-Project/Assets/Prefabs/Art Assets/Videos/Cutscene3.mp4.meta
 Detective-Game-Project/Assets/Prefabs/Art Assets/Videos/Cutscene2.mp4.meta
 Detective-Game-Project/Assets/Prefabs/Art Assets/Videos/Cutscene2.mp4
+Detective-Game-Project/Assets/Prefabs/Art Assets/Videos/Cutscene4.mp4
+Detective-Game-Project/Assets/Prefabs/Art Assets/Videos/Cutscene4.mp4.meta
