added new cutscenes (not on git tho) and muted all sounds whenever a cutscene plays
yuh

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,11 @@ Detective-Game-Project/Assets/Prefabs/Art Assets/Videos/Cutscene2.mp4.meta
 Detective-Game-Project/Assets/Prefabs/Art Assets/Videos/Cutscene2.mp4
 Detective-Game-Project/Assets/Prefabs/Art Assets/Videos/Cutscene4.mp4
 Detective-Game-Project/Assets/Prefabs/Art Assets/Videos/Cutscene4.mp4.meta
+Detective-Game-Project/Assets/Cutscenes/Intro_cutscene1.mp4.meta
+Detective-Game-Project/Assets/Cutscenes/Intro_cutscene1.mp4
+Detective-Game-Project/Assets/Cutscenes/Cutscene4.mp4.meta
+Detective-Game-Project/Assets/Cutscenes/Cutscene4.mp4
+Detective-Game-Project/Assets/Cutscenes/Cutscene3.mp4.meta
+Detective-Game-Project/Assets/Cutscenes/Cutscene3.mp4
+Detective-Game-Project/Assets/Cutscenes/Cutscene2.mp4.meta
+Detective-Game-Project/Assets/Cutscenes/Cutscene2.mp4
