added cutscenes also some yard stuff blabla

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,5 @@ Detective-Game-Project/Assets/Cutscenes/Cutscene3.mp4.meta
 Detective-Game-Project/Assets/Cutscenes/Cutscene3.mp4
 Detective-Game-Project/Assets/Cutscenes/Cutscene2.mp4.meta
 Detective-Game-Project/Assets/Cutscenes/Cutscene2.mp4
+Detective-Game-Project/Assets/Cutscenes/Credits V3.mp4.meta
+Detective-Game-Project/Assets/Cutscenes/Credits V3.mp4
