--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,5 @@ Detective-Game-Project/Assets/Cutscenes/Cutscene2.mp4.meta
 Detective-Game-Project/Assets/Cutscenes/Cutscene2.mp4
 Detective-Game-Project/Assets/Cutscenes/Credits V3.mp4.meta
 Detective-Game-Project/Assets/Cutscenes/Credits V3.mp4
+Detective-Game-Project/Assets/Cutscenes/Credits v3 fix.mp4
+Detective-Game-Project/Assets/Cutscenes/Credits v3 fix.mp4.meta
