added cutscene,,,, and playstation support should be better

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,5 @@ Detective-Game-Project/Assets/Cutscenes/Credits V3.mp4.meta
 Detective-Game-Project/Assets/Cutscenes/Credits V3.mp4
 Detective-Game-Project/Assets/Cutscenes/Credits v3 fix.mp4
 Detective-Game-Project/Assets/Cutscenes/Credits v3 fix.mp4.meta
+Detective-Game-Project/Assets/Cutscenes/Credits V5.mp4
+Detective-Game-Project/Assets/Cutscenes/Credits V5.mp4.meta
