fixed some bugs with the menu and something about kika being able to walk through stuff
hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta hamza.meta  @meuko @meuko

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,5 @@ Detective-Game-Project/Assets/Cutscenes/Credits v3 fix.mp4
 Detective-Game-Project/Assets/Cutscenes/Credits v3 fix.mp4.meta
 Detective-Game-Project/Assets/Cutscenes/Credits V5.mp4
 Detective-Game-Project/Assets/Cutscenes/Credits V5.mp4.meta
+Detective-Game-Project/Assets/Cutscenes/Credits final.mp4.meta
+Detective-Game-Project/Assets/Cutscenes/Credits final.mp4
